--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
 body {
-    font-family: Arial, sans-serif;
-
-    background-image: url('img/file_000000008a8071f5b63d2554060b50ce.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    color: #f8fafc;
-    text-align: center;
-    padding: 30px;
-}
-input, button {
-  padding: 10px;
-  margin: 10px;
-  font-size: 16px;
+    background: red !important;
 }
